--- a/REKTcoin-en.html
+++ b/REKTcoin-en.html
@@ -376,7 +376,7 @@
                 </div>
                 <p class="coin__last-text">Join me on these platforms and together we will embark on an incredible journey through the cryptospace. Let's share knowledge, laughter, and a sense of unity as we aim for the cryptocurrency stars.</p>
                 
-                <div class="coin__orbit">
+                <div id="coinOrbit" class="coin__orbit">
                     <a href="" class="coin__go-container"> <!--В href потрібно встановити посилання для переходу при нажиманні на кнопку-->
                         <img class="coin__go-en" src="img/coin__go-en.png" alt="Button go">
                     </a>
